--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dnspython==2.4.2
 email-validator==2.0.0.post2
 exceptiongroup==1.1.3
 fastapi==0.103.1
+greenlet==2.0.2
 h11==0.14.0
 httpcore==0.18.0
 httptools==0.6.0
@@ -23,6 +24,7 @@ python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0.1
 sniffio==1.3.0
+SQLAlchemy==2.0.21
 starlette==0.27.0
 typing_extensions==4.8.0
 ujson==5.8.0
