--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,29 @@
 annotated-types==0.5.0
 anyio==3.7.1
 certifi==2023.7.22
+charset-normalizer==3.3.0
 click==8.1.7
 dnspython==2.4.2
 email-validator==2.0.0.post2
 exceptiongroup==1.1.3
 fastapi==0.103.1
+filelock==3.12.4
+fsspec==2023.9.2
 greenlet==2.0.2
 h11==0.14.0
 httpcore==0.18.0
 httptools==0.6.0
 httpx==0.25.0
+huggingface-hub==0.17.3
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 mysql-connector-python==8.1.0
 mysqlclient==2.2.0
+numpy==1.26.0
 orjson==3.9.7
+packaging==23.2
 protobuf==4.21.12
 pydantic==2.3.0
 pydantic-extra-types==2.1.0
@@ -26,11 +32,18 @@ pydantic_core==2.6.3
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0.1
+regex==2023.10.3
+requests==2.31.0
+safetensors==0.4.0
 sniffio==1.3.0
 SQLAlchemy==2.0.21
 starlette==0.27.0
+tokenizers==0.14.1
+tqdm==4.66.1
+transformers==4.34.0
 typing_extensions==4.8.0
 ujson==5.8.0
+urllib3==2.0.6
 uvicorn==0.23.2
 uvloop==0.17.0
 watchfiles==0.20.0
