--- a/requirements.txt
+++ b/requirements.txt
@@ -19,11 +19,14 @@ idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mpmath==1.3.0
 mysql-connector-python==8.1.0
 mysqlclient==2.2.0
+networkx==3.0
 numpy==1.26.0
 orjson==3.9.7
 packaging==23.2
+Pillow==9.3.0
 protobuf==4.21.12
 pydantic==2.3.0
 pydantic-extra-types==2.1.0
@@ -38,7 +41,11 @@ safetensors==0.4.0
 sniffio==1.3.0
 SQLAlchemy==2.0.21
 starlette==0.27.0
+sympy==1.12
 tokenizers==0.14.1
+torch==2.1.0+cpu
+torchaudio==2.1.0+cpu
+torchvision==0.16.0+cpu
 tqdm==4.66.1
 transformers==4.34.0
 typing_extensions==4.8.0
