Updated the dockerfile and docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,13 @@ version: '3.1'
 
 services:
 
+  sentiment_analysis_fastapi:
+    container_name: sentiment_analysis_fastapi
+    image: imageName
+    restart: always
+    ports:
+      -8080:8080
+
   db:
     container_name: db
     image: mysql
