Updated .dockerignore to skip venv, updated dockerfile to make the image of our service, updated docker-compose.yml to instantiate db and fastapi-ml service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,12 @@ services:
 
   sentiment_analysis_fastapi:
     container_name: sentiment_analysis_fastapi
-    image: imageName
+    image: fastapi-app
     restart: always
     ports:
-      -8080:8080
+      - 8080:8080
+    depends_on:
+      - db
 
   db:
     container_name: db
