--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,15 @@ services:
     depends_on:
       - db
 
+    # I am also triggering a Mysql database setup script from here
+    
+
   db:
     container_name: db
     image: mysql
     # NOTE: use of "mysql_native_password" is not recommended: https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
     # (this is just an example, not intended to be a production configuration)
+
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
