--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -14,8 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node init_setup_env_file.js && react-scripts start",
-    "build": "node init_setup_env_file.js && react-scripts build",
+    "start": "node src/init_setup_env_file.js && react-scripts start",
+    "build": "node src/init_setup_env_file.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
